adjust layers: remove mountain peaks, aeroways; add traffic signals

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -89,6 +89,7 @@ services:
       MAX_ZOOM: ${MAX_ZOOM}
       # Control tilelive-copy threads
       COPY_CONCURRENCY: ${COPY_CONCURRENCY}
+      UV_THREADPOOL_SIZE: ${COPY_CONCURRENCY}
       #
 
   postserve:
