--- a/layers/building/building.yaml
+++ b/layers/building/building.yaml
@@ -9,16 +9,8 @@ layer:
     key_field: osm_id
     key_field_as_attribute: no
     srid: 900913
-    query: (SELECT osm_id, geometry, render_height, render_min_height, colour, hide_3d FROM layer_building(!bbox!, z(!scale_denominator!))) AS t
+    query: (SELECT osm_id, geometry FROM layer_building(!bbox!, z(!scale_denominator!))) AS t
   fields:
-    render_height: |
-        An approximated height from levels and height of the building or building:part after the method of Paul Norman in [OSM Clear](https://github.com/ClearTables/osm-clear). For future 3D rendering of buildings.
-    render_min_height: |
-        An approximated height from levels and height of the bottom of the building or building:part after the method of Paul Norman in [OSM Clear](https://github.com/ClearTables/osm-clear). For future 3D rendering of buildings.
-    colour: |
-        Colour
-    hide_3d: |
-        If True, building (part) should not be rendered in 3D. Currently, [building outlines](https://wiki.openstreetmap.org/wiki/Simple_3D_buildings) are marked as hide_3d.
 schema:
   - ./update_building.sql
   - ./building.sql
