--- a/layers/boundary/boundary.yaml
+++ b/layers/boundary/boundary.yaml
@@ -14,43 +14,18 @@ layer:
         The `admin_level` corresponds to the lowest `admin_level`
         the line participates in.
         At low zoom levels the Natural Earth boundaries are mapped to the equivalent admin levels.
-    adm0_l: |
-        State name on the left of the border. For country boundaries only (`admin_level = 2`).
-    adm0_r: |
-        State name on the right of the border. For country boundaries only (`admin_level = 2`).
     disputed:
       description: |
           Mark with `1` if the border is disputed.
       values: [0, 1]
-    disputed_name:
-      description: |
-          Field containing name of the disputed area (extracted from border relation in OSM, without spaces).
-          For country boundaries only (`admin_level = 2`).
-          Value examples from Asian OSM pbf extract
-      values:
-      - AbuMusaIsland
-      - BaraHotiiValleys
-      - ChineseClaim
-      - Crimea
-      - Demchok
-      - Dokdo
-      - IndianClaim-North
-      - IndianClaimwesternKashmir
-      - PakistaniClaim
-      - SamduValleys
-      - TirpaniValleys
     claimed_by:
       description: |
           ISO2 code of country, which wants to see the boundary line.
           For country boundaries only (`admin_level = 2`).
-    maritime:
-      description: |
-          Mark with `1` if it is a maritime border.
-      values: [0, 1]
   buffer_size: 4
   datasource:
     geometry_field: geometry
-    query: (SELECT geometry, admin_level, adm0_l, adm0_r, disputed, disputed_name, claimed_by, maritime FROM layer_boundary(!bbox!, z(!scale_denominator!))) AS t
+    query: (SELECT geometry, admin_level, disputed, claimed_by FROM layer_boundary(!bbox!, z(!scale_denominator!))) AS t
 schema:
   - ./boundary_name.sql
   - ./boundary.sql
