--- a/layers/place/place.yaml
+++ b/layers/place/place.yaml
@@ -7,14 +7,6 @@ layer:
       We suggest you use different font styles and sizes to create a text hierarchy.
   fields:
     name: The OSM [`name`](http://wiki.openstreetmap.org/wiki/Key:name) value of the POI.
-    name_en: English name `name:en` if available, otherwise `name`.
-    name_de: German name `name:de` if available, otherwise `name` or `name:en`.
-    capital:
-      description: |
-          The **capital** field marks the
-          [`admin_level`](http://wiki.openstreetmap.org/wiki/Tag:boundary%3Dadministrative#admin_level)
-          of the boundary the place is a capital of.
-      values: [2, 4]
     class:
       description: |
           Original value of the
@@ -26,20 +18,9 @@ layer:
       values:
       - continent
       - country
-      - state
       - city
       - town
       - village
-      - hamlet
-      - suburb
-      - quarter
-      - neighbourhood
-      - isolated_dwelling
-    iso_a2:
-      description: |
-          Two-letter country code [ISO 3166-1 alpha-2](https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2). Available only for `class=country`.
-          Original value of the
-          [`country_code_iso3166_1_alpha_2`](http://wiki.openstreetmap.org/wiki/Tag:place%3Dcountry) tag.
     rank:
       description: |
           Countries, states and the most important cities all have a
@@ -61,7 +42,7 @@ layer:
     geometry_field: geometry
     key_field: osm_id
     key_field_as_attribute: no
-    query: (SELECT osm_id, geometry, name, name_en, name_de, {name_languages}, class, rank, capital, iso_a2 FROM layer_place(!bbox!, z(!scale_denominator!), !pixel_width!)) AS t
+    query: (SELECT osm_id, geometry, name, {name_languages}, class, rank FROM layer_place(!bbox!, z(!scale_denominator!), !pixel_width!)) AS t
 schema:
   - ./types.sql
   - ./capital.sql
