cleanup poi layer; update place, landuse ans aerodrome_label layers

--- a/layers/place/place.yaml
+++ b/layers/place/place.yaml
@@ -42,7 +42,7 @@ layer:
     geometry_field: geometry
     key_field: osm_id
     key_field_as_attribute: no
-    query: (SELECT osm_id, geometry, name, {name_languages}, class, rank FROM layer_place(!bbox!, z(!scale_denominator!), !pixel_width!)) AS t
+    query: (SELECT osm_id, geometry, name, class, rank FROM layer_place(!bbox!, z(!scale_denominator!), !pixel_width!)) AS t
 schema:
   - ./types.sql
   - ./capital.sql
