optimize water layer

--- a/layers/water/mapping.yaml
+++ b/layers/water/mapping.yaml
@@ -83,6 +83,7 @@ tables:
     filters:
       reject:
         covered: ["yes"]
+        is_tunnel: [true]
     mapping:
       landuse:
       - reservoir
