--- a/layers/water/water.yaml
+++ b/layers/water/water.yaml
@@ -9,9 +9,30 @@ layer:
       This however can lead to less rendering options in clients since these boundaries show up. So you might not be
       able to use border styling for ocean water features.
   fields:
+    class:
+      description: |
+          All water polygons from [OpenStreetMapData](http://osmdata.openstreetmap.de/) have the class `ocean`.
+          Water bodies are classified as `lake` or `river` for water bodies with the [`waterway`](http://wiki.openstreetmap.org/wiki/Key:waterway) tag.
+      values:
+        lake:
+          waterway: ['', 'lake']
+        dock:
+          waterway: 'dock'
+        river:
+        ocean:
+    intermittent:
+      description: |
+        Mark with `1` if it is an [intermittent](http://wiki.openstreetmap.org/wiki/Key:intermittent) water polygon.
+      values: [0, 1]
+    brunnel:
+      description: |
+        Identifies the type of crossing as either a bridge or a tunnel.
+      values:
+        - bridge
+        - tunnel
   buffer_size: 4
   datasource:
-    query: (SELECT geometry FROM layer_water(!bbox!, z(!scale_denominator!))) AS t
+    query: (SELECT geometry, class, intermittent, brunnel FROM layer_water(!bbox!, z(!scale_denominator!))) AS t
 schema:
   - ./update_water.sql
   - ./water.sql
