Revert "optimize waterway layer"
This reverts commit e4f6922350b0470678fe6ff49c1b341bb1e14e8e.

--- a/layers/waterway/mapping.yaml
+++ b/layers/waterway/mapping.yaml
@@ -37,8 +37,8 @@ tables:
       type: bool
     mapping:
       waterway:
+      - stream
       - river
       - canal
-    filters:
-      reject:
-        is_tunnel: [true]
+      - drain
+      - ditch
