optimize water layers

--- a/layers/water/mapping.yaml
+++ b/layers/water/mapping.yaml
@@ -83,6 +83,7 @@ tables:
     filters:
       reject:
         covered: ["yes"]
+        tunnel: ["yes"]
     mapping:
       landuse:
       - reservoir
