--- a/layers/transportation/transportation.yaml
+++ b/layers/transportation/transportation.yaml
@@ -45,72 +45,6 @@ layer:
           highway: track
         raceway:
           highway: raceway
-        motorway_construction:
-          __AND__:
-            highway: construction
-            construction: ['motorway', 'motorway_link']
-        trunk_construction:
-          __AND__:
-            highway: construction
-            construction: ['trunk', 'trunk_link']
-        primary_construction:
-          __AND__:
-            highway: construction
-            construction: ['primary', 'primary_link']
-        secondary_construction:
-          __AND__:
-            highway: construction
-            construction: ['secondary', 'secondary_link']
-        tertiary_construction:
-          __AND__:
-            highway: construction
-            construction: ['tertiary', 'tertiary_link']
-        minor_construction:
-          __AND__:
-            highway: construction
-            construction: ['', 'unclassified', 'residential', 'living_street', 'road']
-        path_construction:
-          __AND__:
-            - highway: construction
-            - __OR__:
-                construction: ['pedestrian', 'path', 'footway', 'cycleway', 'steps', 'bridleway', 'corridor']
-                public_transport: platform
-        service_construction:
-          __AND__:
-            highway: construction
-            construction: service
-        track_construction:
-          __AND__:
-            highway: construction
-            construction: track
-        raceway_construction:
-          __AND__:
-            highway: construction
-            construction: raceway
-    subclass:
-      description: |
-          Distinguish more specific classes of railway and path:
-          Subclass is value of the
-          [`railway`](http://wiki.openstreetmap.org/wiki/Key:railway),
-          [`highway`](http://wiki.openstreetmap.org/wiki/Key:highway) (for paths), or
-          [`public_transport`](http://wiki.openstreetmap.org/wiki/Key:public_transport) (for platforms) tag.
-      values:
-      - rail
-      - narrow_gauge
-      - preserved
-      - funicular
-      - subway
-      - light_rail
-      - monorail
-      - tram
-      - pedestrian
-      - path
-      - footway
-      - cycleway
-      - steps
-      - bridleway
-      - corridor
-      - platform
     brunnel:
       description: |
           Mark whether way is a tunnel or bridge.
@@ -129,52 +63,10 @@ layer:
           Mark with `1` whether way is a ramp (link or steps)
           or not with `0`.
       values: [0, 1]
-    service:
-      description: |
-          Original value of the [`service`](http://wiki.openstreetmap.org/wiki/Key:service) tag.
-      values:
-      - spur
-      - yard
-      - siding
-      - crossover
-      - driveway
-      - alley
-      - parking_aisle
-    layer:
-      description: |
-          Original value of the [`layer`](http://wiki.openstreetmap.org/wiki/Key:layer) tag.
-    level:
-      description: |
-          Experimental feature! Filled only for steps and footways. Original
-          value of the [`level`](http://wiki.openstreetmap.org/wiki/Key:level) tag.
-    indoor:
-      description: |
-          Experimental feature! Filled only for steps and footways. Original
-          value of the [`indoor`](http://wiki.openstreetmap.org/wiki/Key:indoor) tag.
-      values:
-      - 1
-    bicycle:
-      description: |
-          Original value of the [`bicycle`](http://wiki.openstreetmap.org/wiki/Key:bicycle) tag (highways only).
-    foot:
-      description: |
-          Original value of the [`foot`](http://wiki.openstreetmap.org/wiki/Key:foot) tag (highways only).
-    horse:
-      description: |
-          Original value of the [`horse`](http://wiki.openstreetmap.org/wiki/Key:horse) tag (highways only).
-    mtb_scale:
-      description: |
-          Original value of the [`mtb:scale`](http://wiki.openstreetmap.org/wiki/Key:mtb:scale) tag (highways only).
-    surface:
-      description: |
-          Values of [`surface`](https://wiki.openstreetmap.org/wiki/Key:surface) tag devided into 2 groups `paved` (paved, asphalt, cobblestone, concrete, concrete:lanes, concrete:plates, metal, paving_stones, sett, unhewn_cobblestone, wood) and `unpaved` (unpaved, compacted, dirt, earth, fine_gravel, grass, grass_paver, gravel, gravel_turf, ground, ice, mud, pebblestone, salt, sand, snow, woodchips).
-      values:
-      - paved
-      - unpaved
   datasource:
     geometry_field: geometry
     srid: 900913
-    query: (SELECT geometry, class, subclass, oneway, ramp, brunnel, service, layer, level, indoor, bicycle, foot, horse, mtb_scale, surface FROM layer_transportation(!bbox!, z(!scale_denominator!))) AS t
+    query: (SELECT geometry, class, oneway, ramp, brunnel FROM layer_transportation(!bbox!, z(!scale_denominator!)) WHERE class NOT LIKE '%_construction') AS t
 schema:
   - ./class.sql
   - ./update_transportation_merge.sql
